--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
   		<artifactId>maven-project</artifactId>
   		<version>2.2.1</version>
   	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.8.2</version>
+		<scope>test</scope>
+	</dependency>
+  	
   </dependencies>
   <packaging>maven-plugin</packaging>
 </project>
