--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.iru.maven.plugins</groupId>
   <artifactId>maven-jaxbgenser-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <dependencies>
   	<dependency>
   		<groupId>org.apache.maven</groupId>
