Add mandatory information for uploading to Central
As noticed by nexus, add:
* name
* description
* url
* license
* scm
* developer(s)

--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,24 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.iru.maven.plugins</groupId>
   <artifactId>jaxbgenser-maven-plugin</artifactId>
+  <name>jaxbgenser-maven-plugin</name>
+  <description>Generate serialVersionUID for JAXB generated classes</description>
+  <url>https://github.com/InternationalRoadTransportUnion/jaxbgenser-maven-plugin</url>
+  <licenses>
+    <license>
+      <name>The Open Software License 3.0 (OSL-3.0)</name>
+      <url>https://opensource.org/licenses/OSL-3.0</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:https://github.com/InternationalRoadTransportUnion/jaxbgenser-maven-plugin.git</connection>
+  </scm>
+  <developers>
+    <developer>
+      <email>Matthieu.Verbert@iru.org</email>
+    </developer>
+  </developers>
   <version>1.0.3-SNAPSHOT</version>
   <dependencies>
   	<dependency>
