--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
       <email>Matthieu.Verbert@iru.org</email>
     </developer>
   </developers>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <dependencies>
   	<dependency>
   		<groupId>org.apache.maven</groupId>
