Get ready for next development phase (1.0.4 [dev])

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
       <email>Matthieu.Verbert@iru.org</email>
     </developer>
   </developers>
-  <version>1.0.3</version>
+  <version>1.0.4-SNAPSHOT</version>
   <dependencies>
   	<dependency>
   		<groupId>org.apache.maven</groupId>
